fix: description overflow in vote page

--- a/webapp/src/components/VotePage/VotePage.css
+++ b/webapp/src/components/VotePage/VotePage.css
@@ -1,3 +1,8 @@
+.VotePage .description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .VotePage .options {
   margin-top: 40px;
 }
